assets/css/style.css
:root {
  --dark-blue: #112A46;
  --light-blue: #f3f8fe;
  --right-padding: 0 4.5rem 0 0;
  --right-space: 4.5rem;
}

body {
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  line-height: 1.5;
}

/*---------- HEADER ----------*/
header {
  /*position- stay at the top of viewport + foreground + padding on the right side*/
  position: sticky;
  top: 0;
  z-index: 10;
  padding: var(--right-padding);


  /* Flex properties (children = header-items(h1 & nav))*/
  display: flex;
  justify-content: space-between;
  align-items: baseline;

  background-color: var(--dark-blue);
  height: 7rem;
}

header h1 {
  color: var(--dark-blue);
  background-color: var(--light-blue);
  font-size: 3.2rem;
  width: 25.5rem;
  text-align: right;
  padding: 0 0.5rem 0 0;
  margin: 0.5rem 0 0 0; /*top margin only*/
}

header nav {
  margin: 0.2rem;
  width: 40rem;
}

#nav-list {
  /* Flex properties of nav ul (children = .nav-list-items)*/
  display: flex;
  justify-content: flex-end;
  font-size: 1.8rem;
}

.nav-list-items {
  padding: 0.1rem;
  margin: 0rem 0.5rem;
  border-bottom: 2px solid var(--light-blue);
  color: var(--light-blue);
}

/*---------- ////////// ----------*/

/*---------- HERO SECTION ----------*/
#hero-banner{
  /*h2 and div background are placed absolute to #hero-banner*/
  position: relative;

  background-image: url(../images/deco/matrix-by-Tobias_ET-Pixabay.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  height: 21rem;
}

#hero-banner div {
  /*Position linked to container*/
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  /*Create a filter for background image*/
  background-color: rgba(0, 32, 112, 0.368);
}

#hero-banner h2 {
  /*Position linked to section #hero-banner*/
  display: inline;
  position: absolute;
  bottom: 2rem;
  right: var(--right-space);

  color: var(--dark-blue);
  background-color: var(--light-blue);
  font-size: 2.5rem;
  padding: 0.5px 1rem 0.5px 1rem;
   /*top margin only*/ 
}
/*---------- ////////// ----------*/
.page-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 4.5rem;
  border: 10px solid pink ;
}

.page-wrapper > *{
  margin-top: 2rem;
}

#about{
  display: flex;
  position: relative;
}


#about .about-items{
  outline: 4px solid;
}
#about h2 {
  /*flex: 1 0 20%;*/

  flex: 1 0 12rem;
  background-color: grey;
  border-right: 5px solid rgba(0, 32, 112, 0.368);
}
#about-text {
  
  /* align-self: start; */
  flex: 3 0 80% ;
  width: 80%;
  background-color: lightblue;
}

#work {
  display: flex;  
}
#work .work-items {
  outline: 5px solid yellow;
}

#work h2 {
  flex: 1 0 12rem;
  background-color: pink;
  border-right: 5px solid rgba(0, 32, 112, 0.368);
}

#work-images{
  display: flex;
  flex-direction: column;
  flex: 3 1 80%;
  background-color: greenyellow;
}

#big-project{
  border: 2px solid black;
}
#small-projects{
  border: 3px solid brown;
}

#small-projects {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

/* .image-sections{

} */


#contact {
  display: flex;
}

#contact h2 {
  flex: 1 0 12rem;
  border-right: 5px solid rgba(0, 32, 112, 0.368);
  background-color: grey;
  outline: 4px dashed red;
}

#contact-text {
  flex: 3 0 80%;
  background-color: aquamarine;
}

p {
  font-size: 2.1rem;
}

#about h2,
#contact h2,
#work h2 {

  margin-right: 3rem;
  font-size: 3.2rem;
  text-align: right;
}


#contact address {
  border: 5px dotted blueviolet;
  padding: 4.5rem;
  width: 80%;
}

#contact-nav{
  display: flex;
  justify-content: space-between;
  align-items: center;
  border: 2px dashed green;
}

